--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12774,7 +12774,7 @@ users:
       name: C00lCreeper426
   1c575be8-a874-4b78-8307-3252351ad276:
     group:
-    - starlord
+    - flashwalterwest
     options:
       name: Leedler268
     worlds:
@@ -20446,7 +20446,7 @@ users:
         permissions: []
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group:
-    - wonderwoman
+    - staffsergeant
     options:
       name: WhatAreThose05
     permissions:
@@ -23961,7 +23961,7 @@ users:
       name: BrodsterTV
   aa323969-2ccc-49c2-90ee-fbf60fa82ee6:
     group:
-    - jinx
+    - emmafrost
     worlds:
       greenfield:
         permissions: []
@@ -24148,7 +24148,7 @@ users:
     - is.officer
     - ch.alias.onduty
     group:
-    - reverseflashdanielwest
+    - officer
     options:
       name: Night_MCU
   647c8c25-fa7a-4539-b6f9-fe684bd6b840:
@@ -24324,6 +24324,11 @@ users:
     - spiderman2099
     options:
       name: Greeney11
+  7135c9c2-94ba-47fe-ad49-091635dde10a:
+    group:
+    - captainuniversepeterparker
+    options:
+      name: WAGGropius
 worlds:
   checkers:
     inheritance:
