--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -298,7 +298,7 @@ v2-logout:
     world: greenfield
   eb0c7b09-20a0-4a7e-9327-c99e26d11991:
     group: default
-    world: survival
+    world: greenfield
   eeedc19e-0249-46e0-8efb-1a096a456144:
     group: default
     world: greenfield
@@ -3160,7 +3160,7 @@ v2-logout:
     world: speedforce
   57b29f1f-dc6b-4d30-80ac-cf64c4df3428:
     group: default
-    world: survival112
+    world: greenfield
   663fa87e-be4c-45d5-bdde-587fa94e8f97:
     world: survival112
   4f0c24c9-ab50-403e-bde5-8fa1db06c1be:
@@ -3313,3 +3313,6 @@ v2-logout:
   8e257f35-c1d2-4d89-9ce4-265955d60f78:
     group: spawn
     world: spawn
+  7135c9c2-94ba-47fe-ad49-091635dde10a:
+    group: default
+    world: survival112
