--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -21135,7 +21135,7 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - officer
+    - speeddemon
     options:
       name: mythguy1226
     permissions:
