--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11724,7 +11724,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - mortal
+    - flashwallywest
     options:
       name: xDcGamer_MCU
     permissions:
@@ -18371,7 +18371,7 @@ users:
         - ch.alias.officekill
   b03318bc-895d-4d3f-8710-c991a38980b5:
     group:
-    - officer
+    - mortal
     options:
       name: DJ_Random
     permissions:
@@ -18389,7 +18389,7 @@ users:
       name: FlamesGalore
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - mrmxyzptlk
+    - batman
     options:
       name: Bcrulez
     permissions: []
@@ -20477,7 +20477,7 @@ users:
       name: Cyborg987
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
     group:
-    - venom
+    - ultron
     options:
       name: Predamorph1519
     permissions:
@@ -21866,7 +21866,7 @@ users:
       name: paddy_wack
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group:
-    - brainiac
+    - nightwing
     options:
       name: Viibe_
     worlds:
@@ -24765,6 +24765,8 @@ users:
   6dd5952e-5f1a-4fe7-b092-e2170c6b9a49:
     group:
     - doctorstrange
+    options:
+      name: Trippman
   8e06b378-3dde-4a14-b733-7384498dd6b6:
     worlds:
       greenfield:
@@ -24772,6 +24774,8 @@ users:
     permissions: []
     group:
     - goku
+    options:
+      name: babyzac
 worlds:
   checkers:
     inheritance:
