--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -54,8 +54,8 @@ v2-logout:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    world: fightclub
-    group: fightclub
+    world: overvoid
+    group: overvoid
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: fightclub
     world: fightclub
@@ -87,11 +87,11 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: deathdrop
-    group: deathdrop
+    world: overvoid
+    group: overvoid
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
-    world: greenfield
-    group: default
+    world: overvoid
+    group: overvoid
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     world: greenfield
     group: default
@@ -201,8 +201,8 @@ v2-logout:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: policeoffice
-    group: policeoffice
+    world: survival112
+    group: default
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -459,8 +459,8 @@ v2-logout:
     group: default
     world: greenfield
   b03318bc-895d-4d3f-8710-c991a38980b5:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: survival112
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     world: survival112
     group: default
@@ -471,8 +471,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
-    world: policeoffice
-    group: policeoffice
+    world: survival112
+    group: default
   9e706bf6-6fc2-4a2a-bdda-4ef531d05908:
     group: default
     world: greenfield
@@ -792,7 +792,7 @@ v2-logout:
     world: survival
   8ae48244-2f6d-4443-8b3e-90178f08e68d:
     group: default
-    world: infinitycity
+    world: gotham
   64572c10-48af-4f46-a706-aef5a6248140:
     group: default
     world: greenfield
@@ -1378,8 +1378,8 @@ v2-logout:
     group: default
     world: survival
   5da26092-c807-4c9b-8d08-9523f74ddc97:
-    world: policeoffice
-    group: policeoffice
+    world: survival112
+    group: default
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
     group: default
     world: greenfield
@@ -1460,7 +1460,7 @@ v2-logout:
     world: greenfield
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group: default
-    world: gotham
+    world: greenfield
   ee058ad1-15d2-48df-bfe2-0dab4c8326f9:
     group: default
     world: greenfield
@@ -2211,8 +2211,8 @@ v2-logout:
     group: default
     world: greenfield
   6dd5952e-5f1a-4fe7-b092-e2170c6b9a49:
-    group: default
-    world: greenfield
+    group: formuladrift
+    world: formuladrift
   b6b29445-6877-4d8d-80d5-61f41a639933:
     group: default
     world: greenfield
@@ -3306,8 +3306,8 @@ v2-logout:
     group: default
     world: greenfield
   182fa38f-b321-44cf-ba16-fe70847459c3:
-    group: infiniteparkour
-    world: infiniteparkour
+    group: spawn
+    world: spawn
   b9f1a00e-0ecd-49e2-b2cd-5d7c4ec0d757:
     group: default
     world: greenfield
@@ -3549,8 +3549,8 @@ v2-logout:
     group: colosseumlobby
     world: colosseumlobby
   77a889c5-b502-4ee2-aec6-1bda35a28826:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   dfbe1460-cec5-46a4-b3ff-cb2f2ca32d27:
     group: default
     world: greenfield
@@ -3561,5 +3561,8 @@ v2-logout:
     group: default
     world: greenfield
   9ad47e37-cd1e-4456-ae8c-cdf8dd4bb385:
+    group: default
+    world: greenfield
+  8e06b378-3dde-4a14-b733-7384498dd6b6:
     group: default
     world: greenfield
