--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -67,6 +67,12 @@ players:
   86408e2f-4cdb-4948-be42-64cf7fc6883f:
     party: SpeedForce
     rank: 20
+  9025e96a-d286-47b0-a709-98d2a4ee42db:
+    party: party
+    rank: 5
+  4ff867f5-6cab-413e-9fad-e4d77ca48778:
+    party: ttttt
+    rank: 5
 parties:
   anti:
     leader: 34a87619-4b40-4ae8-b759-3efa25bbbffd
@@ -82,6 +88,7 @@ parties:
     leader: eb0c7b09-20a0-4a7e-9327-c99e26d11991
     members:
     - eb0c7b09-20a0-4a7e-9327-c99e26d11991
+    - 9025e96a-d286-47b0-a709-98d2a4ee42db
   flash:
     leader: 1b0903a4-9317-478b-9a47-f33bd66f20b7
     members:
@@ -124,6 +131,7 @@ parties:
     - 28556dea-667d-409f-b2ff-fb4177a20ff2
     - 182fa38f-b321-44cf-ba16-fe70847459c3
     - f559cef3-ef94-4e1e-8bcf-1d16dcad2aa6
+    - 4ff867f5-6cab-413e-9fad-e4d77ca48778
   SpeedForce:
     leader: 86408e2f-4cdb-4948-be42-64cf7fc6883f
     members:
