--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3578,8 +3578,8 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&7Sloth Girl'
-      suffix: '&7'
+      prefix: '&4A&ci&6r&ea'
+      suffix: '&c'
     worlds:
       survival112:
         permissions:
@@ -11677,6 +11677,15 @@ groups:
   fanfic3ad4d4251eac4c6798a8ed9a63973059:
     inheritance:
     - commonherotraits
+  fanficd0b35aeef6af44ff84ed6342e8370492:
+    inheritance:
+    - commonherotraits
+  fanfic9068e658a14f43a3ad6504dbac12a5e0:
+    inheritance:
+    - commonherotraits
+  fanficd7757e01cf3f43059590c688214bff78:
+    inheritance:
+    - commonherotraits
 schema-version: 1
 users:
   001b0b15-2f00-4ce1-acff-577e465cb175:
@@ -11724,12 +11733,12 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - flashwallywest
+    - naruto
     options:
       name: xDcGamer_MCU
     permissions:
+    - is.officer
     - ch.alias.onduty
-    - is.sergeant
     - is.supended
     - is.secretary
     - essentials.warps.office
@@ -11972,9 +11981,12 @@ users:
     permissions: []
   060e68a0-60cd-4cfe-b0f3-6d4beefd1b2e:
     group:
-    - mortal
+    - greenlanternhaljordan
     options:
       name: HogoBojo
+    worlds:
+      greenfield:
+        permissions: []
   06bcee96-8e3c-4add-aed0-a27bbddf0f5d:
     group:
     - infinitythanos
@@ -12016,7 +12028,7 @@ users:
       name: Tonao
   07403436-1c7f-4e91-9dd4-58fbe8846992:
     group:
-    - vibe
+    - blackpanther
     options:
       name: KageSmash
   07496d58-6a47-4ad1-82b9-7226420114d4:
@@ -13431,7 +13443,7 @@ users:
       name: TALENTEDLIME555
   2c2de5e0-bf4e-4def-a7bb-507648fb9d66:
     group:
-    - spidermanpeterparker
+    - infinitysilversurfer
     options:
       name: VipeGamingYT
     permissions:
@@ -13544,7 +13556,7 @@ users:
       name: Graybob
   2e7d3f96-bcd7-4ac4-b6a7-fc23f95d49a0:
     group:
-    - goku
+    - kidflashwallywest
     options:
       name: GoldenFoxMiner
     worlds:
@@ -13742,7 +13754,7 @@ users:
       name: HeyPuddin
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group:
-    - blacklanternmartianmanhunter
+    - dormammu
     options:
       name: Glint73
     worlds:
@@ -14888,7 +14900,7 @@ users:
     group:
     - venom
     options:
-      name: Davinf1
+      name: Verderame
   54318dbc-66fa-48c1-9a39-b600996f7a7f:
     group:
     - professorx
@@ -16154,7 +16166,7 @@ users:
       name: RPMGaming
   7673749d-9598-4466-a255-444221041552:
     group:
-    - martianmanhunter
+    - flashbarryallen
     options:
       name: XxRedzEyeGamerxX
     permissions: []
@@ -16308,7 +16320,7 @@ users:
       name: Gokugaming2002
   79bde3af-7aae-489c-a44d-ceba16cc7b02:
     group:
-    - spiderwomangwenstacy
+    - mortal
     options:
       name: WildheartRazara
     permissions: []
@@ -16555,7 +16567,7 @@ users:
       name: Macmac
   7f3ca451-1fd0-4b34-a257-853e9608a3fe:
     group:
-    - shazam
+    - flashjaygarrick
     options:
       name: Chefxavier
   7f513768-1d21-45f8-bb54-9d0c9a8b7664:
@@ -16863,7 +16875,7 @@ users:
       name: Astql
   869b4227-b51e-452e-adbd-48759a6848dd:
     group:
-    - doctormanhattan
+    - mortal
     options:
       name: Grim765Man
     permissions:
@@ -16918,7 +16930,7 @@ users:
         permissions: []
   87bb4f34-8ea7-4e22-a9a6-8c157cf33b1e:
     group:
-    - savitar
+    - martianmanhunter
     options:
       name: Brine_303
     permissions: []
@@ -17274,7 +17286,7 @@ users:
       name: BlueTroubleGamer
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - sergeant
+    - blackcanary
     options:
       name: X_Tony_X
     permissions:
@@ -18077,7 +18089,7 @@ users:
       name: Gulithor
   a90bff3f-1f10-4734-9f90-2dfb0660b66e:
     group:
-    - beerus
+    - whitelanterntelosusr
     options:
       name: MasterGren
     permissions: []
@@ -18371,12 +18383,15 @@ users:
         - ch.alias.officekill
   b03318bc-895d-4d3f-8710-c991a38980b5:
     group:
-    - mortal
+    - officer
     options:
       name: DJ_Random
     permissions:
     - is.officer
     - ch.alias.onduty
+    worlds:
+      greenfield:
+        permissions: []
   b0432f37-93b1-4655-af0e-67448258a1a1:
     group:
     - flashwalterwest
@@ -18736,7 +18751,7 @@ users:
       name: wolve15
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group:
-    - mortal
+    - rocketraccoon
     options:
       name: mintwhip
     permissions:
@@ -19393,7 +19408,7 @@ users:
       name: Zejtko12
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - officer
+    - mortal
     options:
       name: HerpaDerp10000
     permissions:
@@ -19642,10 +19657,12 @@ users:
       name: matyou11
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     group:
-    - beerus
+    - criminal
     options:
       name: Minestock451
     permissions:
+    - multiverse.access.torture
+    - change.chat
     - is.married
     worlds:
       fightclub:
@@ -19838,7 +19855,7 @@ users:
       name: Chararara
   d71ca07f-dffd-42cb-ad49-9034143f641a:
     group:
-    - mortal
+    - onepunchman
     options:
       name: nathan_04
   d71eb121-ee84-4d8d-b3f2-3a25c89a65a7:
@@ -19987,12 +20004,11 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - emmafrost
+    - fanficdbb47887bfbd40e6bfec3d1053ea3aff
     options:
       name: TaterBalls
       prefix: ''
     permissions:
-    - change.chat
     - chat.cooldown
     - -essentials.msg
     - is.secretary
@@ -20477,7 +20493,7 @@ users:
       name: Cyborg987
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
     group:
-    - ultron
+    - dormammu
     options:
       name: Predamorph1519
     permissions:
@@ -21172,12 +21188,12 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - officer
+    - sergeant
     options:
       name: mythguy1226
     permissions:
-    - is.officer
     - ch.alias.onduty
+    - is.sergeant
     - is.married
     - essentials.warps.office
     - essentials.warps.officeadmin
@@ -21858,7 +21874,8 @@ users:
       fightclub:
         permissions: []
     permissions:
-    - multiverse.access.policeoffice
+    - is.officer
+    - ch.alias.onduty
   17262e3d-f8f9-4569-8529-c23f5c01bf4f:
     group:
     - onepunchman
@@ -21866,7 +21883,7 @@ users:
       name: paddy_wack
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group:
-    - nightwing
+    - quicksilver
     options:
       name: Viibe_
     worlds:
@@ -23383,7 +23400,7 @@ users:
       name: autokai144844
   05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
     group:
-    - kirito
+    - martianmanhunter
     worlds:
       greenfield:
         permissions: []
@@ -23487,9 +23504,11 @@ users:
     - multiverse.access.policeoffice
   a427e70d-1a93-4af2-b0c0-81f52eeee4b1:
     group:
-    - whitemartian
+    - yellowlanternsinestro
     options:
       name: WilltheWolf06
+    permissions:
+    - chat.cooldown
   430495e5-3a29-4454-9dde-f5cc42686247:
     group:
     - mortal
@@ -24056,7 +24075,7 @@ users:
       name: NepGear3811
   d0b35aee-f6af-44ff-84ed-6342e8370492:
     group:
-    - thepresence
+    - martianmanhunter
     worlds:
       greenfield:
         permissions: []
@@ -24194,7 +24213,7 @@ users:
       name: SkyGraft007
   5dbf795f-6d7f-4b5f-bb44-2f79ee0547fe:
     group:
-    - nickfury
+    - atom
     options:
       name: pee19
   57b29f1f-dc6b-4d30-80ac-cf64c4df3428:
@@ -24564,7 +24583,7 @@ users:
       name: eggycanadian
   706c2254-0bf4-449b-ba22-6d4eabe7e890:
     group:
-    - firestormraymondstein
+    - bluelanternbarryallen
     options:
       name: BSGamingHD
     worlds:
@@ -24618,7 +24637,7 @@ users:
         permissions: []
   61ab6a9b-57a8-48d6-b753-dc4d7366d991:
     group:
-    - greenlanternhaljordan
+    - scarletspiderbenreilly
     worlds:
       greenfield:
         permissions: []
@@ -24678,14 +24697,16 @@ users:
     worlds:
       fightclub:
         permissions: []
+    permissions: []
   86408e2f-4cdb-4948-be42-64cf7fc6883f:
     group:
-    - flashwalterwest
+    - flashbarryallen
     options:
       name: Nitsua_7
     worlds:
       fightclub:
         permissions: []
+    permissions: []
   88dcc450-a42a-4fe0-883c-89b1f7a54197:
     group:
     - zoom
@@ -24771,11 +24792,78 @@ users:
     worlds:
       greenfield:
         permissions: []
-    permissions: []
+    permissions:
+    - multiverse.access.policeoffice
     group:
     - goku
     options:
       name: babyzac
+  0ca3b938-d741-4660-ba32-a59a3a7edf89:
+    group:
+    - darthmaul
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
+    options:
+      name: MineCraftKids0
+  6ff5d3ef-3270-4ac7-9f28-229f93a6b4cb:
+    group:
+    - magneto
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: thom146
+  c7f6f605-0479-4b8a-a7a9-be9a0b9e171b:
+    group:
+    - whitelanterntelosusr
+    options:
+      name: ZonedOut
+    worlds:
+      greenfield:
+        permissions: []
+  8a58c54c-900a-43af-b0cb-793da59f016b:
+    group:
+    - superman
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: dakaduh
+  6818bbfe-6643-4664-96d0-ed8c410bddfc:
+    group:
+    - starlord
+    options:
+      name: Im_Star_Lord
+  e2f9bfd0-0c81-4ff1-a597-c9bdf97b5387:
+    group:
+    - superman
+    options:
+      name: bny_84
+  9479c596-2bfa-493e-8139-c236d90886d6:
+    group:
+    - hulk
+    options:
+      name: obeythedaleks
+  4ba1dc3d-5cd7-4f87-8d0f-4f46121250e8:
+    group:
+    - novasamalexander
+    options:
+      name: BwiId127
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
+  346c656e-57b7-41fe-9c10-a24841c6b1dd:
+    group:
+    - blackpanther
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: ChaoticWhale
 worlds:
   checkers:
     inheritance:
