--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     world: greenfield
     group: default
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    world: policeoffice
-    group: policeoffice
+    world: survival112
+    group: default
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     world: greenfield
     group: default
@@ -33,8 +33,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: default
-    world: survival112
+    group: policeoffice
+    world: policeoffice
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: policeoffice
     group: policeoffice
@@ -54,8 +54,8 @@ v2-logout:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    world: overvoid
-    group: overvoid
+    world: greenfield
+    group: default
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: fightclub
     world: fightclub
@@ -75,8 +75,8 @@ v2-logout:
     group: default
     world: greenfield
   79bde3af-7aae-489c-a44d-ceba16cc7b02:
-    group: default
-    world: gotham
+    group: plots
+    world: plots
   120b63c4-f322-44a8-a7b0-e15bf7d9f879:
     group: default
     world: greenfield
@@ -87,8 +87,8 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: overvoid
-    group: overvoid
+    world: plots
+    group: plots
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: overvoid
     group: overvoid
@@ -96,11 +96,11 @@ v2-logout:
     world: greenfield
     group: default
   869b4227-b51e-452e-adbd-48759a6848dd:
-    world: survival112
-    group: default
-  d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     world: greenfield
     group: default
+  d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
+    world: torture
+    group: torture
   fa8fd4fe-0071-48da-ab2d-f02fa1a2af58:
     group: fightclub
     world: fightclub
@@ -159,8 +159,8 @@ v2-logout:
     group: default
     world: greenfield
   a8e159ea-deeb-4f73-a246-591b589adcf4:
-    group: spawn
-    world: spawn
+    group: default
+    world: greenfield
   aaa84280-f56b-4b9a-b37b-6641b830788b:
     group: default
     world: greenfield
@@ -195,14 +195,14 @@ v2-logout:
     group: default
     world: greenfield
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
-    group: fightclub
-    world: fightclub
+    group: default
+    world: greenfield
   78af88f4-cd13-4950-a737-7d36b15ead56:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: survival112
-    group: default
+    world: extremesumo
+    group: extremesumo
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -298,7 +298,7 @@ v2-logout:
     world: greenfield
   eb0c7b09-20a0-4a7e-9327-c99e26d11991:
     group: default
-    world: survival112
+    world: survival112_the_end
   eeedc19e-0249-46e0-8efb-1a096a456144:
     group: default
     world: greenfield
@@ -459,8 +459,8 @@ v2-logout:
     group: default
     world: greenfield
   b03318bc-895d-4d3f-8710-c991a38980b5:
-    group: default
-    world: survival112
+    group: escaperoom
+    world: escaperoom
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     world: survival112
     group: default
@@ -471,7 +471,7 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
-    world: survival112
+    world: greenfield
     group: default
   9e706bf6-6fc2-4a2a-bdda-4ef531d05908:
     group: default
@@ -501,8 +501,8 @@ v2-logout:
     group: default
     world: survival112
   2e7d3f96-bcd7-4ac4-b6a7-fc23f95d49a0:
-    group: default
-    world: survival
+    group: spawn
+    world: spawn
   82962759-e518-46cc-9d49-1b560c6fe400:
     group: default
     world: greenfield
@@ -625,7 +625,7 @@ v2-logout:
     group: default
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: default
-    world: survival112
+    world: greenfield
   f1a35d55-39db-4012-a70d-e677f6e91dc3:
     group: default
     world: greenfield
@@ -792,7 +792,7 @@ v2-logout:
     world: survival
   8ae48244-2f6d-4443-8b3e-90178f08e68d:
     group: default
-    world: gotham
+    world: greenfield
   64572c10-48af-4f46-a706-aef5a6248140:
     group: default
     world: greenfield
@@ -1496,7 +1496,7 @@ v2-logout:
     world: greenfield
   f7263849-baba-4d78-9018-3d790b86bf6b:
     group: default
-    world: greenfield
+    world: survival112
   f15b523a-14e6-4f59-b040-4d5e254130f6:
     group: default
     world: greenfield
@@ -1843,7 +1843,7 @@ v2-logout:
     world: greenfield
   7673749d-9598-4466-a255-444221041552:
     group: default
-    world: survival
+    world: greenfield
   412f983d-ecaa-402a-9a04-a65a00a95d8d:
     group: default
     world: greenfield
@@ -1974,8 +1974,8 @@ v2-logout:
     group: default
     world: greenfield
   060e68a0-60cd-4cfe-b0f3-6d4beefd1b2e:
-    group: default
-    world: greenfield
+    group: office
+    world: office
   1ed0aceb-9a90-46bd-b935-073247b7be9c:
     group: default
     world: greenfield
@@ -2211,8 +2211,8 @@ v2-logout:
     group: default
     world: greenfield
   6dd5952e-5f1a-4fe7-b092-e2170c6b9a49:
-    group: formuladrift
-    world: formuladrift
+    group: default
+    world: survival112
   b6b29445-6877-4d8d-80d5-61f41a639933:
     group: default
     world: greenfield
@@ -2256,8 +2256,8 @@ v2-logout:
     group: office
     world: office
   403ed908-a0bc-4a9d-bb74-a18eb5400298:
-    group: chess
-    world: chess
+    group: default
+    world: greenfield
   c5d1f6d3-f22a-49be-9f83-4b9b1f42e61f:
     group: default
     world: greenfield
@@ -2352,7 +2352,8 @@ v2-logout:
     group: default
     world: greenfield
   5350e525-128d-4330-8e17-8bff2d645d5f:
-    world: info
+    world: survival112
+    group: default
   21dfe2df-e0f9-4c3c-8274-cfdb9ada65e0:
     group: default
     world: survival
@@ -2496,7 +2497,7 @@ v2-logout:
     world: greenfield
   05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
     group: default
-    world: survival112
+    world: greenfield
   be38c0ad-0e4f-4481-a0dd-bda1d39fc50e:
     group: default
     world: greenfield
@@ -2543,8 +2544,8 @@ v2-logout:
     group: default
     world: greenfield
   a427e70d-1a93-4af2-b0c0-81f52eeee4b1:
-    group: default
-    world: greenfield
+    group: deathrun
+    world: deathrun
   90af359b-e458-4d7f-88d6-46e3c61b2b07:
     group: default
     world: survival
@@ -2865,7 +2866,7 @@ v2-logout:
     world: greenfield
   5dbf795f-6d7f-4b5f-bb44-2f79ee0547fe:
     group: default
-    world: survival112
+    world: greenfield
   b05a8adb-961b-46d1-b0bf-e012938bdca9:
     group: default
     world: greenfield
@@ -3015,7 +3016,7 @@ v2-logout:
     world: greenfield
   d0b35aee-f6af-44ff-84ed-6342e8370492:
     group: default
-    world: greenfield
+    world: survival112
   8843b9f7-88dc-4372-87dc-44d0eb797a20:
     group: default
     world: greenfield
@@ -3412,7 +3413,7 @@ v2-logout:
     world: spleef
   22a40965-827c-44b8-8f1e-f9d8d03b918e:
     group: default
-    world: survival112
+    world: greenfield
   36c68b7e-0a9f-4d80-aca3-dcddde1331e3:
     group: default
     world: greenfield
@@ -3510,8 +3511,8 @@ v2-logout:
     group: default
     world: survival112
   81af48ee-380c-4c97-832b-4963b4deb166:
-    group: fightclub
-    world: fightclub
+    group: lavahop
+    world: lavahop
   86408e2f-4cdb-4948-be42-64cf7fc6883f:
     group: default
     world: survival112
@@ -3522,8 +3523,8 @@ v2-logout:
     group: newminigamehub
     world: newminigamehub
   8a58c54c-900a-43af-b0cb-793da59f016b:
-    group: default
-    world: greenfield
+    group: colosseumlobby
+    world: colosseumlobby
   7ee8ce77-84e2-4941-bd82-943b0cc9841d:
     group: default
     world: survival112
@@ -3566,3 +3567,48 @@ v2-logout:
   8e06b378-3dde-4a14-b733-7384498dd6b6:
     group: default
     world: greenfield
+  592d7e61-4023-4c85-9ab6-cd34cf02a330:
+    group: default
+    world: greenfield
+  6ff5d3ef-3270-4ac7-9f28-229f93a6b4cb:
+    group: default
+    world: greenfield
+  0ca3b938-d741-4660-ba32-a59a3a7edf89:
+    group: spleeflobby
+    world: spleeflobby
+  c7f6f605-0479-4b8a-a7a9-be9a0b9e171b:
+    group: default
+    world: greenfield
+  a78ae266-1c8a-4ee0-b19a-878f683fe60d:
+    group: spawn
+    world: spawn
+  6818bbfe-6643-4664-96d0-ed8c410bddfc:
+    group: default
+    world: greenfield
+  d71ca07f-dffd-42cb-ad49-9034143f641a:
+    group: lavahop
+    world: lavahop
+  542b4e6c-96ce-4ca4-a7b0-9cfe0d5170e0:
+    group: default
+    world: greenfield
+  7f3ca451-1fd0-4b34-a257-853e9608a3fe:
+    group: default
+    world: greenfield
+  e2f9bfd0-0c81-4ff1-a597-c9bdf97b5387:
+    group: default
+    world: greenfield
+  23cf66c4-f697-44b1-b047-94128062b239:
+    group: default
+    world: greenfield
+  9479c596-2bfa-493e-8139-c236d90886d6:
+    group: default
+    world: greenfield
+  dff65ad4-9a21-4e30-a368-5e3b8779d235:
+    group: default
+    world: greenfield
+  4ba1dc3d-5cd7-4f87-8d0f-4f46121250e8:
+    group: skywarslobby
+    world: skywarslobby
+  346c656e-57b7-41fe-9c10-a24841c6b1dd:
+    group: office
+    world: office
