--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11168,6 +11168,7 @@ groups:
         - magic.cast.etaercsnoisulli
         - magic.cast.tekcajtiarts
         - magic.commands.cast
+        - essentials.tp
   zeus:
     inheritance:
     - commonherotraits
