--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11696,7 +11696,7 @@ groups:
         - ch.alias.run1
         - ch.alias.run0
     options:
-      prefix: DEO Combat stragetist
+      prefix: Space
   fanficc6cb4b81f1e7446db966e4ed7b45909d:
     inheritance:
     - commonherotraits
@@ -23509,7 +23509,7 @@ users:
       name: autokai144844
   05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
     group:
-    - fanfic05bf0af3a0a64e9ebb7da29d7d43ea85
+    - ichigokurosaki
     worlds:
       greenfield:
         permissions: []
