--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -46,7 +46,7 @@ v2-logout:
     world: survival
   0889f21e-b82c-49a0-ab3c-6e5b0232d093:
     group: default
-    world: survival
+    world: greenfield
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     world: greenfield
     group: default
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: greenfield
-    group: default
+    world: infiniteparkour
+    group: infiniteparkour
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
     world: plots
@@ -2495,8 +2495,8 @@ v2-logout:
     group: default
     world: greenfield
   05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
-    group: default
-    world: survival112
+    group: newminigamehub
+    world: newminigamehub
   be38c0ad-0e4f-4481-a0dd-bda1d39fc50e:
     group: default
     world: greenfield
