--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,21 @@
 groups:
+   superskrull:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&5Su&0pe&5r&0-&5S&0k&aru&5l&0l'
+      suffix: '&6'
+    worlds:
+      survival112:
+        permissions:
+        - essentials.fly
+        - powers.fireballpunch
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.invis
+        - ch.alias.vis
   electro:
     inheritance:
     - commonherotraits
