--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,14 @@
 groups:
+  doctoroctopus:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2Do&6ct&2or &2O&6c&7t&4o&7p&6u&2s'
+      suffix: '&2'
+    worlds:
+      survival112:
+        permissions:
+        - powers.wallclimb
   electro:
     inheritance:
     - commonherotraits
