--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -4232,8 +4232,8 @@ v2-logout:
     group: default
     world: greenfield
   1c84f042-c7f6-4e76-8629-49954715d7e1:
-    group: office
-    world: office
+    group: default
+    world: greenfield
   826078fb-4108-4c7d-8bfb-d317d82b96cd:
     group: anarchy
     world: anarchy
