--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,22 @@
 groups:
+  mysterio:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2My&5st&eer&2i&5o'
+      suffix: '&d'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.disguise
+        - essentials.tppos
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.invis
+        - ch.alias.vis
+        - Magic.commands.cast
+        - Magic.cast.telekinisis
   electro:
     inheritance:
     - commonherotraits
