--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,5 +1,15 @@
 groups:
-   superskrull:
+  doctoroctopus:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2Do&6ct&2or &2O&6c&7t&4o&7p&6u&2s'
+      suffix: '&2'
+    worlds:
+      survival112:
+        permissions:
+        - powers.wallclimb
+  superskrull:
     inheritance:
     - commonherotraits
     options:
@@ -13476,7 +13486,7 @@ users:
       name: ii_Indra
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - missmartian
+    - superskrull
     options:
       name: BasicallyHark
       prefix: ''
@@ -20476,7 +20486,7 @@ users:
       name: TehPirate13
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     group:
-    - redhood
+    - agentvenom
     options:
       name: AlchemyBA
     permissions:
