--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -93,7 +93,7 @@ v2-logout:
     world: policeoffice
     group: policeoffice
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
-    world: survival112
+    world: infinitycity
     group: default
   869b4227-b51e-452e-adbd-48759a6848dd:
     world: greenfield
