--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: spawn
-    group: spawn
+    world: greenfield
+    group: default
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
     world: plots
