--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,16 @@
 groups:
+  vulture:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2Vu&al&ft&au&2re''
+      suffix: '&a'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - essentials.fly
   mysterio:
     inheritance:
     - commonherotraits
