--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -14295,7 +14295,7 @@ users:
       name: daxakapewbropie
   3be4c2e1-b94f-4644-be50-6b06448019fd:
     group:
-    - spidermanpeterparker
+    - naruto
     options:
       name: B1LLYJ0EFRACTURE
     permissions: []
@@ -26437,7 +26437,7 @@ users:
       name: RdixGamer
   82fd1c9e-f178-4c3d-a533-0575fd4460c0:
     group:
-    - apocalypse
+    - criminal
     worlds:
       greenfield:
         permissions: []
@@ -26930,12 +26930,14 @@ users:
     worlds:
       greenfield:
         permissions: []
+      fightclub:
+        permissions: []
     permissions: []
     options:
       name: BatWayneS
   cf548e0d-f288-4678-9f69-d7f7aef49411:
     group:
-    - joker
+    - reverseflasheobardthawne
     options:
       name: beniam888
     worlds:
@@ -27073,6 +27075,21 @@ users:
   3f3bc928-e82b-42f6-8de1-d5f43789fb11:
     group:
     - batman
+    worlds:
+      fightclub:
+        permissions: []
+    options:
+      name: ISenseThemAll
+  ee622e2d-e9e6-4e98-b0d8-0af6e11ca8ad:
+    group:
+    - ironspider
+    options:
+      name: landonboy24
+  4d54be91-6769-493f-97b6-7f351cb0a194:
+    group:
+    - spidermanpeterparker
+    options:
+      name: Adekin
 worlds:
   checkers:
     inheritance:
