--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -54,7 +54,7 @@ v2-logout:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    world: greenfield
+    world: survival112
     group: default
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: fightclub
@@ -4179,8 +4179,8 @@ v2-logout:
     group: default
     world: greenfield
   2a63e405-eecf-480a-9fcf-1e22b996d998:
-    group: default
-    world: survival112
+    group: spleef
+    world: spleef
   b17051f2-c3ef-4038-b85b-2f776ae6e1b2:
     group: default
     world: greenfield
@@ -4356,8 +4356,8 @@ v2-logout:
     group: default
     world: greenfield
   82fd1c9e-f178-4c3d-a533-0575fd4460c0:
-    world: greenfield
-    group: default
+    world: overvoid
+    group: overvoid
   c3dca926-2959-4c0f-a178-c11ea689b7c2:
     group: default
     world: greenfield
@@ -4613,8 +4613,8 @@ v2-logout:
     group: spawn
     world: spawn
   de1caaa3-0475-49e0-ac69-01a982c26d71:
-    group: default
-    world: greenfield
+    group: policeoffice
+    world: policeoffice
   cf548e0d-f288-4678-9f69-d7f7aef49411:
     group: default
     world: greenfield
@@ -4670,8 +4670,8 @@ v2-logout:
     group: default
     world: survival112
   2a70570b-3836-47c1-80e4-9dc4a83ad85a:
-    group: default
-    world: survival112
+    group: plots
+    world: plots
   60b6e21a-a80b-43dd-910e-c5e99aa790c8:
     group: default
     world: greenfield
@@ -4702,3 +4702,12 @@ v2-logout:
   fee1e6d7-dbd6-4602-883a-5284b8c2a9a3:
     group: default
     world: greenfield
+  ee622e2d-e9e6-4e98-b0d8-0af6e11ca8ad:
+    group: default
+    world: greenfield
+  3f3bc928-e82b-42f6-8de1-d5f43789fb11:
+    group: default
+    world: survival112
+  4d54be91-6769-493f-97b6-7f351cb0a194:
+    group: default
+    world: survival112
