--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -16292,7 +16292,7 @@ users:
       name: FatNinjaTurtle_
   6f4c8bf6-f5b6-4859-b75a-e47a7341ccca:
     group:
-    - greenarrow
+    - martianmanhunter
     options:
       name: Fisherbear9
   6f618269-b8c3-480c-a108-e70947f52865:
